2021-06-14  Patrick Angle  <pangle@apple.com>

        Web Inspector: CSS variables not handled as case sensitive
        https://bugs.webkit.org/show_bug.cgi?id=226875

        Reviewed by Devin Rousso.

        Add a test to make sure that CSS variable declarations that vary only in case do not override each other.

        * inspector/css/overridden-property-expected.txt:
        * inspector/css/overridden-property.html:

2021-06-14  Youenn Fablet  <youenn@apple.com>

        Fix RTCDataChannelInit::decode
        https://bugs.webkit.org/show_bug.cgi?id=226968

        Reviewed by Eric Carlson.

        * platform/mac-wk1/TestExpectations:

2021-06-14  Robert Jenner  <jenner@apple.com>

        [LayoutTests] Delete unused LayoutTests/plugins resources
        https://bugs.webkit.org/show_bug.cgi?id=226837

        Reviewed by Jonathan Bedard.

        * plugins/resources/frame-with-plugin-subframe.html: Removed.
        * plugins/resources/lines.swf: Removed.
        * plugins/resources/plugin-page.html: Removed.

2021-06-14  Per Arne  <pvollan@apple.com>

        [AppleWin] Update test expectations
        https://bugs.webkit.org/show_bug.cgi?id=226970

        Unreviewed test gardening.

        * platform/win/TestExpectations:

2021-06-14  Alan Bujtas  <zalan@apple.com>

        [LFC][TFC] Add support for flexing columns when the content is also flexing
        https://bugs.webkit.org/show_bug.cgi?id=226959

        Reviewed by Antti Koivisto.

        * TestExpectations: LFC matches Chrome and Firefox.
        * fast/layoutformattingcontext/table-space-distribution-simple-mismatching-expected.txt: Added.
        * fast/layoutformattingcontext/table-space-distribution-simple-mismatching.html: Added.
        * fast/layoutformattingcontext/table-space-distribution-simple2-expected.html: Added.
        * fast/layoutformattingcontext/table-space-distribution-simple2.html: Added.

2021-06-13  Fujii Hironori  <Hironori.Fujii@sony.com>
